src/markdown/tests/snapshots/mehen__markdown__tests__assert_fixture_snapshot@images_no_alt.md.snap
---
source: src/markdown/tests/mod.rs
---
path: "<fixture_path>"
loc:
  dloc: 9
  ploc: 5
  cloc: 0
  tloc: 0
  mloc: 0
  bloc: 3
  aloc: 1
loc_ratios:
  artifact_line_ratio: 0.1111111111111111
  code_line_ratio: 0
  table_line_ratio: 0
  math_line_ratio: 0
  blank_line_ratio: 0.3333333333333333
size:
  words: 30
  effective_content_units: 0.125
  sections: 1
  headings: 1
ecu_inputs:
  table_cells: 0
  diagram_nodes: 0
  diagram_edges: 0
  math_tokens: 0
  raw_html_or_mdx_lines: 0
sections:
  - section_id: 0
    heading_level: 1
    heading_text: ~
    start_line: 1
    end_line: 9
    parent_section_id: ~
    child_section_ids: []
    word_count: 30
    block_count: 3
complexity:
  reading_path_complexity: 1
  reading_path_complexity_raw: 1
  cognitive_complexity: 0.75
  halstead:
    operators_distinct: 5
    operators_total: 8
    operands_distinct: 32
    operands_total: 37
    vocabulary: 37
    length: 45
    volume: 234.42540145330275
    difficulty: 2.890625
    effort: 677.6359260759533
    embedded_volume: 0
    total_volume: 234.42540145330275
links:
  total: 2
  internal: 0
  relative: 2
  external: 0
  external_vendor: 0
  scholarly: 0
  issue_pr: 0
  absolute_same_repo: 0
  image: 2
  footnote: 0
  bare_url: 0
  broken: 1
  link_debt_score: 0.45
  information_scent_score: 0.44999999999999996
  review_burden: 4.1
visuals:
  images: 2
  diagrams: 0
  diagram_nodes_total: 0
  diagram_edges_total: 0
  diagram_cycles_total: 0
  visual_scaffold_score: 0.9712858623572642
  visual_net_effect: 0
tables:
  count: 0
  max_cells: 0
  table_burden_score: 0
  table_scaffold_score: 0
  hard_warnings: 0
maintainability:
  documentation_maintainability_index: 90.68692894160743
  section_balance_score: 0.85
  good_scaffold_score: 0.31032146558931606
  artifact_debt_score: 0
grounding:
  repository_grounding_score: 0.055714285714285716
  evidence_coverage_score: 1
ai_era:
  filler_lazy_structure_risk: 0.3096904761904762
  labels:
    - low-repository-grounding
    - specificity-scarcity
  top_contributors:
    - - low-repository-grounding
      - 0.9442857142857143
    - - specificity-scarcity
      - 0.6944444444444444
    - - lazy-sectioning
      - 0.24999999999999994
review:
  review_criticality_index: 12.180535714285714
artifacts:
  - id: 0
    kind: image
    start_line: 7
    end_line: 7
    language_tag: ~
    size: 1
    has_explanation: true
    has_label: true
    oversized: false
    burden: 1
  - id: 1
    kind: image
    start_line: 9
    end_line: 9
    language_tag: ~
    size: 1
    has_explanation: true
    has_label: true
    oversized: false
    burden: 1
prose:
  language_detection:
    dominant_language: en
    blocks:
      - start_line: 1
        end_line: 1
        language: en
      - start_line: 3
        end_line: 5
        language: en
      - start_line: 9
        end_line: 9
        language: en
  english:
    readability:
      flesch_reading_ease: ~
      flesch_kincaid_grade: ~
      gunning_fog: ~
      smog: ~
      ari: ~
      coleman_liau: ~
      dale_chall_new: ~
      dale_chall_list: ngsl-1.2
      forcast: ~
      lix: ~
      rix: ~
      ensemble_grade_band:
        - ~
        - ~
    lexical:
      mattr_50: 0.778
      hapax_ratio: 0.786
      dis_ratio: 0.179
      lexical_density: 0.583
      avg_sentence_words: 7.2
      p90_sentence_words: 17
      max_sentence_words: 17
      stddev_sentence_words: 5.636
      avg_word_chars: 4.25
      p90_word_chars: 7
      sentence_count: 5
      words_total: 36
    wording:
      passive_ratio: 0
      hedge_density: 0
      weasel_density: 0
      wordy_density: 0
      adverb_density: 0
      nominalization_density: 0
      expletive_count: 0
      lexical_illusions: 0
      cliche_density: 0
      nonword_count: 0
      long_sentence_count: 0
      wording_quality_score: 1
    inclusive_language:
      flags: []
      inclusive_language_score: 1
      flag_count: 0
    short_doc_warning: true
  japanese: ~
  meta:
    short_doc_warning: true
    words_counted: 36
    sentences_counted: 5
    blocks_stripped:
      - code
