src/markdown/tests/snapshots/mehen__markdown__tests__assert_fixture_snapshot@links_mixed.md.snap
---
source: src/markdown/tests/mod.rs
---
path: "<fixture_path>"
loc:
  dloc: 29
  ploc: 14
  cloc: 0
  tloc: 0
  mloc: 0
  bloc: 13
  aloc: 2
loc_ratios:
  artifact_line_ratio: 0.06896551724137931
  code_line_ratio: 0
  table_line_ratio: 0
  math_line_ratio: 0
  blank_line_ratio: 0.4482758620689655
size:
  words: 29
  effective_content_units: 0.12083333333333333
  sections: 3
  headings: 3
ecu_inputs:
  table_cells: 0
  diagram_nodes: 0
  diagram_edges: 0
  math_tokens: 0
  raw_html_or_mdx_lines: 0
sections:
  - section_id: 0
    heading_level: 1
    heading_text: ~
    start_line: 1
    end_line: 29
    parent_section_id: ~
    child_section_ids:
      - 1
      - 2
    word_count: 26
    block_count: 7
  - section_id: 1
    heading_level: 2
    heading_text: ~
    start_line: 19
    end_line: 26
    parent_section_id: 0
    child_section_ids: []
    word_count: 3
    block_count: 3
  - section_id: 2
    heading_level: 2
    heading_text: ~
    start_line: 27
    end_line: 29
    parent_section_id: 0
    child_section_ids: []
    word_count: 0
    block_count: 2
complexity:
  reading_path_complexity: 1
  reading_path_complexity_raw: 4
  cognitive_complexity: 6.3389999999999995
  halstead:
    operators_distinct: 8
    operators_total: 37
    operands_distinct: 40
    operands_total: 47
    vocabulary: 48
    length: 84
    volume: 469.1368500605771
    difficulty: 4.7
    effort: 2204.9431952847126
    embedded_volume: 0
    total_volume: 469.1368500605771
links:
  total: 15
  internal: 2
  relative: 7
  external: 5
  external_vendor: 1
  scholarly: 1
  issue_pr: 1
  absolute_same_repo: 0
  image: 0
  footnote: 1
  bare_url: 1
  broken: 2
  link_debt_score: 0.76
  information_scent_score: 0.3857142857142857
  review_burden: 16.7
visuals:
  images: 0
  diagrams: 0
  diagram_nodes_total: 0
  diagram_edges_total: 0
  diagram_cycles_total: 0
  visual_scaffold_score: 0
  visual_net_effect: 0
tables:
  count: 0
  max_cells: 0
  table_burden_score: 0
  table_scaffold_score: 0
  hard_warnings: 0
maintainability:
  documentation_maintainability_index: 81.60371428571428
  section_balance_score: 0.85
  good_scaffold_score: 0.10785714285714285
  artifact_debt_score: 0
grounding:
  repository_grounding_score: 0.10714285714285714
  evidence_coverage_score: 0.4230769230769231
ai_era:
  filler_lazy_structure_risk: 0.48457142857142865
  labels:
    - low-artifact-density
    - low-repository-grounding
    - placeholder-heavy
    - specificity-scarcity
  top_contributors:
    - - low-artifact-density
      - 1
    - - placeholder-heavy
      - 1
    - - specificity-scarcity
      - 1
review:
  review_criticality_index: 14.732767857142859
artifacts: []
prose:
  language_detection:
    dominant_language: en
    blocks:
      - start_line: 1
        end_line: 1
        language: en
      - start_line: 3
        end_line: 3
        language: en
      - start_line: 5
        end_line: 6
        language: en
      - start_line: 8
        end_line: 9
        language: en
      - start_line: 11
        end_line: 11
        language: en
      - start_line: 13
        end_line: 13
        language: en
      - start_line: 15
        end_line: 15
        language: en
      - start_line: 17
        end_line: 17
        language: en
      - start_line: 19
        end_line: 19
        language: en
      - start_line: 21
        end_line: 21
        language: en
      - start_line: 27
        end_line: 27
        language: en
      - start_line: 29
        end_line: 29
        language: en
  english:
    readability:
      flesch_reading_ease: ~
      flesch_kincaid_grade: ~
      gunning_fog: ~
      smog: ~
      ari: ~
      coleman_liau: ~
      dale_chall_new: ~
      dale_chall_list: ngsl-1.2
      forcast: ~
      lix: ~
      rix: ~
      ensemble_grade_band:
        - ~
        - ~
    lexical:
      mattr_50: 0.76
      hapax_ratio: 0.775
      dis_ratio: 0.175
      lexical_density: 0.788
      avg_sentence_words: 4
      p90_sentence_words: 8
      max_sentence_words: 9
      stddev_sentence_words: 2.689
      avg_word_chars: 5.038
      p90_word_chars: 8
      sentence_count: 13
      words_total: 52
    wording:
      passive_ratio: 0
      hedge_density: 0
      weasel_density: 0
      wordy_density: 0.019
      adverb_density: 0.019
      nominalization_density: 0.019
      expletive_count: 0
      lexical_illusions: 0
      cliche_density: 0
      nonword_count: 0
      long_sentence_count: 0
      wording_quality_score: 0.972
    inclusive_language:
      flags: []
      inclusive_language_score: 1
      flag_count: 0
    short_doc_warning: true
  japanese: ~
  meta:
    short_doc_warning: true
    words_counted: 52
    sentences_counted: 13
    blocks_stripped: []
